Various fixes
- `api.getAttribute()` should return number if it can
- Firefox does not show the second pop-up from actions chain
- Commands pop-up shows an additional vertical scrollbar

--- a/src/styles.css
+++ b/src/styles.css
@@ -107,6 +107,9 @@ img {
 .aside-button .mat-icon {
   margin-right: 0 !important;
 }
+.cdk-global-scrollblock {
+  overflow-y: initial;
+}
 
 /* Custom */
 .shadow-right {
